tests/wpt/tests/third_party/test262/test/built-ins/NativeErrors/TypeError/constructor.js
// Copyright (C) 2015 André Bargull. All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
es6id: 19.5.6.1
description: >
  TypeError is a constructor function.
---*/

assert.sameValue(typeof TypeError, 'function', 'typeof TypeError is "function"');
